--- a/04Python/04 문자열과_문자열함수_input.ipynb
+++ b/04Python/04 문자열과_문자열함수_input.ipynb
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "id": "3770285b",
    "metadata": {},
    "outputs": [],
@@ -1321,27 +1321,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "id": "ad323fbf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text =\"안녕하세요!~ This is a test. 1234 #$%^()\""
+    "text =\"안녕하세요ㅋㅋㅋㅋㅋ!~ This is a test. 1234 #$%^()\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 3,
    "id": "220c8b47",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'안녕하세요  This is a test 1234'"
+       "'안녕하세요    This is a test 1234'"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
